; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_connection.c_tcp_relay_set_callbacks.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_connection.c_tcp_relay_set_callbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_14__* }
%struct.TYPE_14__ = type { i32, i32* }

@tcp_onion_callback = common dso_local global i32 0, align 4
@tcp_response_callback = common dso_local global i32 0, align 4
@tcp_status_callback = common dso_local global i32 0, align 4
@tcp_data_callback = common dso_local global i32 0, align 4
@tcp_oob_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @tcp_relay_set_callbacks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcp_relay_set_callbacks(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca %struct.TYPE_14__*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.TYPE_13__* @get_tcp_connection(i32* %8, i32 %9)
  store %struct.TYPE_13__* %10, %struct.TYPE_13__** %6, align 8
  %11 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %12 = icmp ne %struct.TYPE_13__* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %39

14:                                               ; preds = %2
  %15 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_14__*, %struct.TYPE_14__** %16, align 8
  store %struct.TYPE_14__* %17, %struct.TYPE_14__** %7, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %19, i32 0, i32 1
  store i32* %18, i32** %20, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @onion_response_handler(%struct.TYPE_14__* %24, i32* @tcp_onion_callback, i32* %25)
  %27 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %28 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %29 = call i32 @routing_response_handler(%struct.TYPE_14__* %27, i32* @tcp_response_callback, %struct.TYPE_14__* %28)
  %30 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %31 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %32 = call i32 @routing_status_handler(%struct.TYPE_14__* %30, i32* @tcp_status_callback, %struct.TYPE_14__* %31)
  %33 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %34 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %35 = call i32 @routing_data_handler(%struct.TYPE_14__* %33, i32* @tcp_data_callback, %struct.TYPE_14__* %34)
  %36 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %37 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %38 = call i32 @oob_data_handler(%struct.TYPE_14__* %36, i32* @tcp_oob_callback, %struct.TYPE_14__* %37)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %14, %13
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local %struct.TYPE_13__* @get_tcp_connection(i32*, i32) #1

declare dso_local i32 @onion_response_handler(%struct.TYPE_14__*, i32*, i32*) #1

declare dso_local i32 @routing_response_handler(%struct.TYPE_14__*, i32*, %struct.TYPE_14__*) #1

declare dso_local i32 @routing_status_handler(%struct.TYPE_14__*, i32*, %struct.TYPE_14__*) #1

declare dso_local i32 @routing_data_handler(%struct.TYPE_14__*, i32*, %struct.TYPE_14__*) #1

declare dso_local i32 @oob_data_handler(%struct.TYPE_14__*, i32*, %struct.TYPE_14__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
